# Smoke_Simulation

./: .gitignore  CMakeLists.txt
shaders/: point.frag  point.vert
src/: CMakeLists.txt  camera.cc  camera.hh  emittor.cc  emittor.hh  main.cc  navier_stoke_solver.cc  navier_stoke_solver.hh  particle.cc  particle.hh  sim_param.hh  smoke.cc  smoke.hh  smoke_param.hh  smoke_simulator.cc  smoke_simulator.hh
src/collision/: collisionObject.hh  plane.cc  plane.hh
src/misc/: camera_info.cpp  camera_info.h  camera_ops.cpp  collada_info.h  misc.h
